--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
         - name: k8-service-dummy
-          image: service-dummy:latest
-          imagePullPolicy: Never
+          image: monsieur486/microservice:0.0.3-SNAPSHOT
+          imagePullPolicy: Always
